--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -10,6 +10,6 @@
       </div>
       <button type="submit">Entrar</button>
     </form>
-    <p>No tienes cuenta? <button (click)="goToRegister()">Registrate aquí</button></p>
+    <p>No tienes cuenta? <a href="register">Registrate aquí</a></p>
   </div>
 </div>
