--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -16,6 +16,6 @@
       </div>
       <button type="submit">Registrarse</button>
     </form>
-    <p>Ya tienes cuenta? <button (click)="goToLogin()">Inicia sesión aquí</button></p>
+    <p>Ya tienes cuenta? <a href="login">Inicia sesión aquí</a></p>
   </div>
 </div>
