--- a/src/app/auth/register-player/register-player.component.html
+++ b/src/app/auth/register-player/register-player.component.html
@@ -77,8 +77,10 @@
     </div>
 
     <div class="form-group checkbox-group">
-      <input type="checkbox" id="lookingForTeam" formControlName="lookingForTeam">
-      <label for="lookingForTeam">Actualmente buscando equipo</label>
+      <label for="lookingForTeam">
+        Actualmente buscando equipo
+        <input type="checkbox" id="lookingForTeam" formControlName="lookingForTeam">
+      </label>
     </div>
 
     <div class="form-group">
