--- a/src/app/auth/register-player/register-player.component.scss
+++ b/src/app/auth/register-player/register-player.component.scss
@@ -1,3 +1,10 @@
+body {
+  background-image: url('/fondo.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 .registration-container {
   max-width: 800px;
   margin: auto;
