--- a/src/app/auth/register-player/user-type-selector/user-type-selector.component.scss
+++ b/src/app/auth/register-player/user-type-selector/user-type-selector.component.scss
@@ -7,13 +7,20 @@
   background: #f2ac29;
   padding: 2rem;
   font-family: 'Zain', sans-serif;
+  background-image: url('/fondo.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 
   h2 {
-    color: #fffbf5;
+    color: #6FA696;
     font-size: 3rem;
     margin-bottom: 2rem;
     text-align: center;
     font-weight: 700;
+    padding: 15px;
+    background-color: #fffbf5;
+    border-radius: 12px;
   }
 
   .options {
@@ -39,7 +46,7 @@
       }
 
       h3 {
-        color: #f2ac29;
+        color: #6FA696;
         font-size: 2rem;
         margin-bottom: 1rem;
         font-weight: 700;
