--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,13 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  background-image: url('/public/fondo.jpg');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  margin: 0;
+}
